# MLPproject-structure

./: Dockerfile  app.py  dvc.yaml  main.py  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: docker-build.yml
artifacts/: .gitignore  feature_contributions.json  model.pkl  model_report.json  preprocessor.pkl
artifacts/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
artifacts/catboost_info/learn/: events.out.tfevents
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/data/: EDA STUDENT PERFORMANCE .ipynb  MODEL TRAINING.ipynb  StudentsPerformance.csv.dvc
notebook/data/catboost_info/: catboost_training.json  time_left.tsv
notebook/data/catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py  utils.py  visualize_feature_importance.py
src/MLP_project_structure/: cli.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
src/scripts/: data_ingestion.py  data_transformation.py  model_trainer.py  predict.py
templates/: home.html  index.html  result.html
